--- a/index.html
+++ b/index.html
@@ -5,22 +5,21 @@
   <title>Roblox Join Redirect</title>
   <script>
     window.onload = function() {
-      // Get query params
       const params = new URLSearchParams(window.location.search);
       const placeId = params.get("placeId");
       const serverId = params.get("serverId");
 
       if (placeId && serverId) {
-        // Construct Roblox link
         const robloxLink = `roblox://placeID=${placeId}&gameInstanceId=${serverId}`;
 
         // Redirect to Roblox
         window.location.href = robloxLink;
 
-        // Try closing the page (may only work if user opened via script/button)
+        // After 2 seconds, try closing the window
         setTimeout(() => {
+          window.open('', '_self'); // Some browsers require this hack
           window.close();
-        }, 1000);
+        }, 2000);
       } else {
         document.body.innerHTML = "<h2>Missing placeId or serverId in URL.</h2>";
       }
@@ -28,6 +27,6 @@
   </script>
 </head>
 <body>
-  <p>Redirecting to Roblox...</p>
+  <p>Launching Roblox…</p>
 </body>
 </html>
