--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             // const robloxLink = `roblox://placeID=${placeId}&gameInstanceId=${jobId}`;
             // window.location.href = robloxLink;
             sleep(1000);
-            console.log(document.visibilityState);
+            while (true) {
+                console.log(document.visibilityState);
+                sleep(1000);
+            };
             // window.addEventListener("blur", () => {
             //     document.body.innerHTML = `<p>Redirecting to https://www.roblox.com/games/${placeId}</p>`;
             //     sleep(250)
