--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             console.log(document.visibilityState);
             sleep(1000);
             console.log(document.visibilityState);
+            sleep(1000);
+            document.body.innerHTML = `<p>Redirecting to https://www.roblox.com/games/${placeId}</p>`
             // window.addEventListener("blur", () => {
             //     document.body.innerHTML = `<p>Redirecting to https://www.roblox.com/games/${placeId}</p>`;
             //     sleep(250)
