--- a/index.html
+++ b/index.html
@@ -3,41 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Roblox Join Redirect</title>
-    <script>
-    function sleep(ms) {
-        return new Promise(resolve => setTimeout(resolve, ms));
-    }
-    window.onload = function() {
-        const params = new URLSearchParams(window.location.search);
-        const placeId = params.get("placeId");
-        const jobId = params.get("jobId");
-
-        if (placeId && jobId) {
-            const robloxLink = `roblox://placeID=${placeId}&gameInstanceId=${jobId}`;
-            window.location.href = robloxLink;
-            sleep(1000);
-            console.log(document.visibilityState);
-            sleep(1000);
-            console.log(document.visibilityState);
-            sleep(1000);
-            console.log(document.visibilityState);
-            sleep(1000);
-            console.log(document.visibilityState);
-            sleep(1000);
-            console.log(document.visibilityState);
-            sleep(1000);
-            console.log(document.visibilityState);
-            sleep(1000);
-            document.body.innerHTML = `<p>Redirecting to https://www.roblox.com/games/${placeId}</p>`
-            // window.addEventListener("blur", () => {
-            //     document.body.innerHTML = `<p>Redirecting to https://www.roblox.com/games/${placeId}</p>`;
-            //     sleep(250)
-            //     window.location.href = `https://www.roblox.com/games/${placeId}`;
-            // });
-        } else {
-            document.body.innerHTML = "<p>Missing placeId or jobId in URL.</p>";
+    <style>
+        /* Dark theme styles */
+        body {
+            background-color: #121212; /* dark background */
+            color: #f0f0f0;           /* light text */
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            text-align: center;
         }
-    }
+        a {
+            color: #4ea1ff; /* bright link color */
+            text-decoration: underline;
+        }
+        p {
+            margin: 10px 0;
+            font-size: 1.1rem;
+        }
+    </style>
+    <script>
+        function sleep(ms) {
+            return new Promise(resolve => setTimeout(resolve, ms));
+        }
+        window.onload = async function() {
+            const params = new URLSearchParams(window.location.search);
+            const placeId = params.get("placeId");
+            const jobId = params.get("jobId");
+
+            if (placeId && jobId) {
+                const robloxLink = `roblox://placeID=${placeId}&gameInstanceId=${jobId}`;
+                window.location.href = robloxLink;
+                await sleep(5000);
+                document.body.innerHTML = "<p>You may now close this window.</p><p>If Roblox did not launch, please ensure you have it installed. <a href='https://www.roblox.com/download/client?os=win'>Download Roblox</a></p>";
+            } else {
+                document.body.innerHTML = "<p>Missing placeId or jobId in URL.</p>";
+            }
+        }
     </script>
 </head>
 <body>
